<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/pesoEDT"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/peso_hint"/>

    <EditText
        android:id="@+id/alturaEDT"
        style="@style/input_style"
        android:layout_alignEnd="@id/pesoEDT"
        android:layout_marginHorizontal="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pesoEDT"
        android:layout_alignStart="@id/pesoEDT"
        tools:visibility="visible"
        android:hint="@string/altura_hint"/>

    <TextView
        android:id="@+id/titleTXT"
        style="@style/title_purple"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/calcularBTN"
        tools:visibility="visible"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/calcularBTN"
        android:text="@string/imc"/>

    <Button
        android:id="@+id/calcularBTN"
        android:backgroundTint="@android:color/holo_green_dark"
        tools:visibility="visible"
        android:text="@string/calcular"
        android:padding="15dp"
        android:textSize="16sp"
        android:layout_marginTop="46dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>